--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
         "node-red-node-email":"0.1.*",
         "node-red-node-twitter":"0.1.*",
         "node-red-node-rbe":"0.1.*"
+        "node-red-contrib-orchestrate":"0.1.3"
+        
     },
     "optionalDependencies": {
         "node-red-node-serialport":"0.2.*",
